[gd_scene load_steps=3 format=3 uid="uid://cdqnf8gfx5e2l"]

[ext_resource type="Script" path="res://scripts/killzone.gd" id="1_tdjb6"]
[ext_resource type="AudioStream" uid="uid://bdj3qjeljut4e" path="res://assets/sounds/hurt.wav" id="2_l31jr"]

[node name="Killzone" type="Area2D"]
collision_mask = 2
script = ExtResource("1_tdjb6")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="audHurt" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_l31jr")

[connection signal="body_shape_entered" from="." to="." method="_on_body_shape_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
